[package]
name = "bigdecimal_decimal_benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
bigdecimal = { version = "0.4", features = ["serde"], default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false